--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,16 @@
   <groupId>jhberges</groupId>
   <artifactId>camel-gossip</artifactId>
   <version>1.0.0-SNAPSHOT</version>
+  <dependencies>
+  	<dependency>
+        <groupId>io.teknek</groupId>
+        <artifactId>gossip</artifactId>
+        <version>0.0.2</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.camel</groupId>
+        <artifactId>camel-core</artifactId>
+        <version>2.15.1</version>
+     </dependency>
+  </dependencies>
 </project>
