--- a/pom.xml
+++ b/pom.xml
@@ -2,19 +2,65 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-  <groupId>jhberges</groupId>
-  <artifactId>camel-gossip</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <dependencies>
-  	<dependency>
-        <groupId>io.teknek</groupId>
-        <artifactId>gossip</artifactId>
-        <version>0.0.2</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.camel</groupId>
-        <artifactId>camel-core</artifactId>
-        <version>2.15.1</version>
-     </dependency>
-  </dependencies>
+	<groupId>jhberges</groupId>
+	<artifactId>camel-gossip</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>Camel Gossip</name>
+	<url>http://github.com/jhberges/camel-gossip</url>
+	<inceptionYear>2015</inceptionYear>
+
+
+	<properties>
+		<camel.version>2.15.1</camel.version>
+		<slf4j.version>1.7.12</slf4j.version>
+		<logback.version>1.1.3</logback.version>
+		<gossip.version>0.0.2</gossip.version>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>io.teknek</groupId>
+			<artifactId>gossip</artifactId>
+			<version>${gossip.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-core</artifactId>
+			<version>${camel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+			<optional>true</optional>
+		</dependency>
+	</dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
+	<organization>
+		<name>jhberges</name>
+		<url>http://github.com/jhberges</url>
+
+	</organization>
 </project>
